# gptme_auto

./: README.md  gptme.toml  pyproject.toml  run_queue.py  task_queue.json
project_files/: .coverage  .wget-hsts  code_analysis.txt  detailed_analysis.txt  main.py  paste.txt  pyproject.toml  rate_limiter.py  task_processor.py  task_queue.json  template_manager.py  test_processor.py
project_files/.cache/matplotlib/: fontlist-v330.json  fontlist-v390.json
project_files/.conda/: environments.txt
project_files/.ipython/profile_default/: history.sqlite
project_files/.jupyter/: jupyter_notebook_config.py  migrated
project_files/.launchpadlib/api.launchpad.net/cache/: api.launchpad.net,devel,-application,json,fc4e1e3a03117146fb1e9d492ab76690  api.launchpad.net,devel,-application,vnd.sun.wadl+xml,2f09acb494bdefdbf8ef0d1396a05e86  api.launchpad.net,devel,~ubuntugis,+archive,ubuntu,ubuntugis-unstable,ws.op=getSigningKeyData-application,json,7175912b774927890c98382e2c079b9f  api.launchpad.net,devel,~ubuntugis,name=%22ubuntugis-unstable%22&ws.op=getPPAByName-application,json,80097ec6dc3fab1b39f850c230d300d7
project_files/.local/share/jupyter/: nbsignatures.db  notebook_secret
project_files/.local/share/jupyter/runtime/: jpserver-7-open.html  jpserver-7.json  jupyter_cookie_secret  kernel-08f70c55-7b72-4264-a3db-bf9adc9fc644.json  kernel-319f7b05-50d4-4105-8d64-02d4dc77c86d.json  kernel-41c31317-1f68-4943-b4ea-81fb82fe50b8.json  kernel-b0fa5acb-58c3-4517-a593-b34a59c87770.json
project_files/src/: rate_limiter.py  task_processor.py
project_files/tests/: test_original.py  test_rate_limiter.py  test_task_processor.py  test_template_manager.py
src/: cli.py  config_manager.py  rate_limiter.py  schemas.py  system_context.md  task_generator.py  task_queue.py  task_templates.py  templates.py
src/pytest_ai_reporter/: collectors.py  models.py  plugin.py
tests/: test_cli.py  test_rate_limiter.py  test_task_queue.py  test_task_templates.py
